--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <br>
 <div class="container">
-    <h3 class="d-flex justify-content-center">Pokemoné</h3>
+  <div class="image-container">
+    <img src ="assets/images/logo.png" width="100px"/>
+  </div>
     <router-outlet></router-outlet>
 </div>
 <app-poke-list></app-poke-list>
