--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,9 @@
     display: block;
 
 }
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* Adjust the height of the container as needed */
+  }
