--- a/src/app/poke-list/poke-list.component.html
+++ b/src/app/poke-list/poke-list.component.html
@@ -38,7 +38,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" ></button>
             </div>
             <div class="modal-body">
-                <app-pokemone-show [detailId]="DetailId"></app-pokemone-show>
+                <app-pokemone-show [detailId]="detailId"></app-pokemone-show>
             </div>
         </div>
     </div>
